fix: fixed overlapping text fields

--- a/packages/wp-content/plugins/rjsf-renderer/src/rjsf-renderer-gutenberg/rjsf-renderer-gutenberg.scss
+++ b/packages/wp-content/plugins/rjsf-renderer/src/rjsf-renderer-gutenberg/rjsf-renderer-gutenberg.scss
@@ -4,6 +4,10 @@
 
 .rjsf.rjsf-renderer-gutenberg {
 
+  fieldset {
+    min-inline-size: auto;
+  }
+
   legend {
     font-size: 11px;
     font-weight: 500;
